[project]
name = "microhabit-ai-backend"
version = "0.1.0"
description = "Flask backend for AI-powered habit tracking"
# Use 3.10 here to match your preference
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=6.0.2",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "google-genai>=1.65.0",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.1.0",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[tool.uv]
managed = true
# This stops the "Unable to determine which files to ship" error
package = false 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"